2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-defun-if-undefined),
	(slime-defmacro-if-undefined): Renamed to
	`slime-DEFUN-if-undefined' and `slime-DEFMACRO-if-undefined' to
	better differentiate between the two.

	(slime-indulge-pretty-colors): New function. You can now put a
	symbol on the plist of `slime-indulge-pretty-colors' to make the
	symbol be fontified like `defun'. This is done for
	`slime-def-connection-var', and the two symbols above.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-defmacro-if-undefined): New. Analogous to
	`slime-defun-if-undefined'.
	([portablity]] with-selected-window) Use it.
	([portability] with-temo-buffer): Likewise.

	Patch by Theam Yong Chew.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	C-c C-c on (defun foo () ,bar) did not result in a compiler note
	overlay on SBCL.

	* swank-sbcl.lisp (compiler-note-location): Make it take a
	condition; if the condition is a READER-ERROR, the passed
	compiler-error-context is very likely NIL---we have not proceeded
	beyond reading, so we aren't within the compiler yet. In that
	case, we use the stream position of the stream behind the
	READER-ERROR instead.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* doc/slime.texi: Fix typos, and add keybindings not listed there.

	Patch by Stas Boukarev.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (sldb-backward-frame): Only move backward when we're
	below the backtrace marker.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (debug-in-emacs): Moved (WITH-BINDINGS
	*SLDB-PRINTER-BINDINGS* ...), from here...
	(sldb-loop): ... to here. Otherwise results from a user doing an
	eval-in-frame were truncated.

	Reported by Jeff Workman.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (hash-table-to-alist): New function.
	([method] emacs-inspect (hash-table)): Sort keys if they're all
	numbers, symbols, or strings.
